Switch user service to OpenAPI definitions (#52)
* Switch user service to OpenAPI definitions

* Update modelMapper

* Refactor user service

* Fix template service test